# CRM-HTH

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  Procfile  README.md  REVIEW_REQUEST.md  backfill_company_news.py  create_email_queue_table.py  desktop_widget.html  desktop_widget.py  desktop_widget_local.html  discover_news_pages.py  generate_vault.py  generate_voice_profile.py  import_customer_data.py  monitor_scan.py  process_existing_emails.py  process_personal_directly.py  pyproject.toml  quick_vault_generator.py  requirements.txt  setup_dev.sh  skipped_companies.txt  spawn_personal_workers.py  start_scan.py  start_widget.sh  test_account_order.py  test_hth_sync.py  test_resume_logic.py  widget_server.py
.github/workflows/: ci.yml
docs/adr/: 001-id-first-strategy.md  002-dual-vault-systems.md  003-token-bucket-rate-limiting.md
migrations/: env.py
migrations/versions/: 20260225_initial_schema.py  20260301_add_email_body.py  20260301_add_relationship_profiles.py  20260301_add_voice_profiles.py  20260302_add_crm_models.py  20260304_1022_e29bf653f294_add_news_search_override_to_companies.py  20260304_1709_ef8b3c88b002_add_linkedin_url_to_contacts.py  20260304_add_body_null_partial_index.py  20260305_0600_a1b2c3d4e5f6_add_linkedin_url_to_companies.py  20260305_0730_b2c3d4e5f6a7_add_enrichment_status_to_contacts.py  20260305_0800_c3d4e5f6a7b8_add_work_type_to_companies.py  20260305_0830_d4e5f6a7b8c9_add_discovered_contacts.py  20260305_0900_e5f6a7b8c9d0_add_is_direct_to_discovered_contacts.py  20260305_1000_f6a7b8c9d0e1_add_soft_delete.py  20260305_1100_g7h8i9j0k1l2_add_job_change_tracking.py  20260305_1200_h8i9j0k1l2m3_add_leadership_discovery.py  20260305_1300_i9j0k1l2m3n4_add_dashboard_indexes.py  20260305_1400_j0k1l2m3n4o5_add_linkedin_name.py  20260305_2200_k1l2m3n4o5p6_add_is_approved.py  20260305_add_news_intelligence.py  20260307_0600_l2m3n4o5p6q7_add_monitoring_tier.py  20260307_0601_m3n4o5p6q7r8_add_linkedin_posts.py  20260308_0100_n4o5p6q7r8s9_add_logo_verification.py  20260308_0600_o5p6q7r8s9t0_add_contact_source.py
scripts/debug/: fetch_and_insert_missing.py  fetch_missing_ids.py  find_missing_emails.py  inspect_missing_email.py  test_gmail_labels.py  test_in_anywhere_fix.py  test_pagination.py
scripts/enrichment/: browser.py  company_linkedin_enricher.py  compute_tiers.py  crm_client.py  enr_importer.py  enr_pdf_parser.py  human_behavior.py  leadership_discoverer.py  (+9 more)
supabase/: config.toml
tests/: conftest.py
(+103 files in other folders)
