[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by Black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/debug/*" = ["E402", "E741"]
"scripts/enrichment/*" = ["E402"]
"scripts/ops/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# --- Strict flags relaxed for pre-existing code (226 errors as of 2026-04-02) ---
# Re-enable these incrementally as modules are annotated:
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
warn_unused_ignores = false

# Modules with pre-existing type errors — suppress until fixed
[[tool.mypy.overrides]]
module = [
    "src.api.routers.crm",
    "src.api.routers.outreach",
    "src.api.routers.auth",
    "src.api.routers.dashboard",
    "src.api.routers.scan",
    "src.core.config",
    "src.core.database",
    "src.integrations.gmail.rate_limiter",
    "src.monitoring.autonomous_guardian",
    "src.services.enrichment.*",
    "src.services.gmail.contact_merger",
    "src.services.news.*",
    "src.services.obsidian.*",
    "src.services.relationships.*",
    "src.services.voice.draft_service",
    "src.worker.*",
]
ignore_errors = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
